special events alignment fix

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -474,7 +474,9 @@ body.nopad {
         }
     }
     .special-events {
+        h1 { padding-left: 15px; }
         .event-list {
+            padding-left: 0;
             li {
                 padding-left: 4.625em;
                 margin-left: 0;
